# django-for-runners

./: .editorconfig  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  AUTHORS  Dockerfile  MANIFEST.in  Makefile  README.creole  README.md  README.rst  boot_django_for_runners.cmd  boot_django_for_runners.sh  cli.py  docker-compose.yml  download_chartjs.sh  download_dygraphs.sh  download_leaflet.sh  git_sync.sh  manage.py  manage.sh  noxfile.py  pyproject.toml  pytest.ini  requirements.dev.txt  requirements.txt  run_black.sh  run_pytest.py  run_test_project_dev_server.sh  setup.cfg  setup.py  tox.ini
.github/workflows/: pythonapp.yml  tests.yml
.run/: Template Python.run.xml  manage --help.run.xml  manage code_style.run.xml
deployment/: .gitignore  Dockerfile  Makefile  README.creole  common.env  compose.dev.sh  compose.sh  docker-compose.dev.yml  docker-compose.yml  project.env  pyproject.toml
deployment/caddy/: Caddyfile
deployment/django/: docker_settings.py  entrypoint.sh  gunicorn.conf.py  manage.py  reload_gunicorn.sh
deployment/for_runners/: entrypoint.sh  kill_python.sh
deployment/scripts/: apt-cleanup.sh  apt-distupgrade.sh  setup_user.sh
dev_scripts/: download_chartjs.sh  download_dygraphs.sh  download_leaflet.sh  fill_translations.py
for_runners/: __init__.py  __main__.py  admin.py  app_settings.py  apps.py  checks.py  cli.py  constants.py  context_processors.py  error_handling.py  exceptions.py  forms.py  geo.py  gpx.py  managers.py  model_utils.py  models.py  request_session.py  svg.py  tasks.py  version.py  weather.py
for_runners/admin/: __init__.py  discipline.py  distance.py  event.py  gpx.py  gpx_import_export.py  utils.py
for_runners/cli/: cli_app.py
for_runners/gpx_tools/: detect_track_type.py  garmin2gpxpy.py  gpx_parser.py  gpxpy2map.py  humanize.py  kml.py
for_runners/gpx_tools/tests/: test_detect_track_type.py  test_kml.py
for_runners/management/commands/: backup.py  base.py  fill_basedata.py  import_gpx.py  import_tracks.py  recreate_files.py  recreate_svg.py
for_runners/managers/: gpx.py
for_runners/migrations/: 0001_initial.py  0001_squashed_0010_auto_20180628_2237.py  0001_squashed_0011_auto_20180702_2120.py  0002_auto_20180602_0739.py  0002_auto_20180702_2252.py  0002_auto_20180710_1910.py  0003_auto_20180612_2154.py  0003_auto_20180712_2043.py  0004_auto_20180621_1948.py  0004_auto_20180719_1739.py  0005_auto_20180731_1855.py  0005_gpxmodel_creator.py  0006_auto_20180902_1958.py  0006_remove_gpxmodel_map_image.py  0007_auto_20190402_1628.py  0007_create_distance_model_20180627_2108.py  0007_gpxmodel_gpx_file.py  0008_auto_20180628_1748.py  0008_auto_20190402_1731.py  0008_gpxmodel_gpx_file.py  0009_gpxmodel_net_duration.py  0010_auto_20180628_2237.py  0010_participationmodel_person2user.py  0011_auto_20180702_2120.py  0011_participationfilemodel.py  0012_participationimagemodel.py  0013_alter_eventmodel_createby_and_more.py
for_runners/models/: __init__.py  discipline.py  distance.py  event.py  fields.py  gpx.py
for_runners/selectors/: gpx.py
for_runners/services/: gpx.py  gpx_calculate_values.py  gpx_create.py  gpx_save_gpx.py  gpx_svg_generator.py
for_runners/signal_handlers/: gpx.py
for_runners/static/: for_runners.css
for_runners/static/dygraph/: dygraph.min.js.map
for_runners/templates/for_runners/: chartjs.html  distance_pace_statistics.html  distance_statistics.html  gpx_info.html  gpx_metadata.html  leaflet_map.html  upload_gpx_file.html  upload_tracks.html
for_runners/tests/: __init__.py  base.py  test_admin.py  test_boot.py  test_command_import.py  test_command_import_import_1.snapshot.json  test_cutted_hash.py  test_doctests.py  test_fill_basedata.py  test_geo.py  test_gpx.py  test_model.py  test_project_setup.py  test_services_gpx_create.py  test_svg.py  test_utils.py  test_weather.py  utils.py
for_runners/tests/fixture_files/: PentaxK1.KML  __init__.py  garmin_connect_1.gpx  garmin_no_heart_rate.gpx  metaweather_4695_744.json  no_track_points.gpx  nominatim_osm_reverse_0_0.json  osm_5143785_661701.json  parliament_buildings.gpx
for_runners/tests/fixtures/: __init__.py  metaweather.py  metaweather_4695_744.json  metaweather_5141_678.json  metaweather_5144_662.json  metaweather_5252_1338.json  metaweather_location_648820_2018_2_21.json  metaweather_location_648820_2018_6_20.json  openstreetmap.py  osm_0_0.json  osm_5105254_244456.json  osm_5143785_661701.json  osm_51437889_66617012.json  osm_5143789_661701.json  osm_5251861_1337611.json  weather.py  weather_514109_67828_2018-06-21.json  weather_91_0_2024-07-01.json
for_runners/tests/mocks/: weather_mock.py
for_runners/views/: media_files.py
for_runners_project/: __init__.py  __main__.py  cli.py  manage.py  publish.py  settings.py  settings_tests.py  starter.py  urls.py  wsgi.py
for_runners_project/for_runners_helper_app/fixtures/: 0001_discipline.py
for_runners_project/settings/: base.py  local.py  prod.py  tests.py
for_runners_project/templates/admin/: base_site.html
for_runners_project/tests/: __init__.py  test_admin.py  test_admin_event.py  test_admin_event_participation.py  test_project_setup.py  test_readme.py  test_readme_history.py
for_runners_project/utils/: gunicorn_server.py  venv.py
for_runners_test_project/: manage.py  settings.py  settings_tests.py  urls.py  wsgi.py
for_runners_test_project/templates/: base.html  other_template.html  two_placeholder_slots.html
for_runners_tests/: test_admin.py  test_env_setup.py
manage_django_project/: README.md  apps.py  checks.py  config.py
manage_django_project/management/commands/: code_style.py  coverage.py  project_info.py  run_dev_server.py  safety.py  tox.py  update_req.py
manage_django_project/tests/: test_project_setup.py
requirements/: base.txt  dev.txt  prod.txt  test.txt  tests.txt
src/for_runners/: __init__.py  app_settings.py  context_processors.py  forms.py  geo.py  svg.py  weather.py
src/for_runners/admin/: __init__.py  event.py  gpx.py
src/for_runners_project/: __init__.py  urls.py  wsgi.py
src/for_runners_tests/: utils.py
(+63 files in other folders)
