[tool.poetry]
name = "django-for-runners-deployment"
version = "0.1.0"
description = "production deployment for  Django-ForRunners project with docker-compose usage"
authors = ["JensDiemer <git@jensdiemer.de>"]
license = "GPL"

[tool.poetry.dependencies]
python = ">=3.7,<4.0.0"
docker-compose = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
